<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/general">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="Linear"
            android:icon="@drawable/ic_style"
            android:key="note_style_key"
            android:title="@string/choose_note_style"
            app:entries="@array/note_style_array"
            app:useSimpleSummaryProvider="true"
            app:entryValues="@array/note_style_values" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="hh:mm:ss - yyyy/MM/dd"
            android:key="time_format_key"
            android:title="@string/choose_time_format"
            app:entries="@array/time_format_array"
            app:entryValues="@array/time_format_values"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_time_format" />
        <Preference
            android:icon="@drawable/ic_remove_ads"
            android:summary="@string/remove_ads_summary"
            android:title="@string/remove_ads" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="remove_ads_key"
        android:title="@string/theme_settings">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="1"
            android:key="theme_key"
            android:title="@string/choose_theme"
            app:entries="@array/choose_theme_array"
            app:useSimpleSummaryProvider="true"
            app:entryValues="@array/choose_theme_values"
            app:icon="@drawable/ic_style_1" />
        <PreferenceCategory
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/note_text_settings">

            <ListPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultValue="16"
                android:title="@string/title_text_size"
                android:key="title_size_key"
                android:icon="@drawable/ic_text"
                app:entries="@array/text_size_array"
                app:useSimpleSummaryProvider="true"
                app:entryValues="@array/text_size_values" />
            <ListPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultValue="14"
                android:title="@string/content_text_size"
                android:key="content_size_key"
                android:icon="@drawable/ic_text"
                app:entries="@array/text_size_array"
                app:useSimpleSummaryProvider="true"
                app:entryValues="@array/text_size_values" />
        </PreferenceCategory>
    </PreferenceCategory>
</PreferenceScreen>